@@ -2,12 +2,8 @@ package org.jjspizzeria.jjspizzeria.pizza;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.jjspizzeria.jjspizzeria.pizza.pizzadecorator.BakeDecorator;
-import org.jjspizzeria.jjspizzeria.pizza.pizzadecorator.BasePizza;
-import org.jjspizzeria.jjspizzeria.pizza.pizzadecorator.HamDecorator;
-import org.jjspizzeria.jjspizzeria.pizza.pizzadecorator.JalapenoDecorator;
 import org.jjspizzeria.jjspizzeria.pizza.pizzadecorator.Pizza;
 import org.jjspizzeria.jjspizzeria.pizza.pizzadecorator.PizzaDecorator;
 import org.jjspizzeria.jjspizzeria.pizza.pizzadecorator.SliceDecorator;
@@ -21,9 +17,7 @@ public class PizzaRater {
         Pizza current = pizza;
         List<T> list = new ArrayList<>();
 
-        while (current instanceof PizzaDecorator) {
-            PizzaDecorator currentDecorator = (PizzaDecorator) current;
-    
+        while (current instanceof PizzaDecorator currentDecorator) {    
             if (clazz.isAssignableFrom(currentDecorator.getClass())) {
                 // Type safety: we've just made sure this decorator is an instance of T
                 // (at least at compile time)
@@ -43,12 +37,12 @@ public class PizzaRater {
         List<Topping> orderedToppings = getPizzaDecorators(ordered, ToppingDecorator.class)
             .stream()
             .map(d -> d.getTopping())
-            .collect(Collectors.toList());
+            .toList();
 
         List<Topping> madeToppings = getPizzaDecorators(made, ToppingDecorator.class)
             .stream()
             .map(d -> d.getTopping())
-            .collect(Collectors.toList());
+            .toList();
 
 
         for (Topping madeTopping : madeToppings) {
@@ -83,13 +77,6 @@ public class PizzaRater {
         // Turn the number of mistakes into a score between 0 - 1
         // We do this by dividing by the number of decorators in the order chain (as a rough
         // measure of how complex the order is), and clamping
-        return Math.max(Math.min((double)mistakes / (double)orderComplexity, 1.), 0.);
-    }
-
-    public static void main(String[] args) {
-        Pizza a = new HamDecorator(new JalapenoDecorator(new BasePizza()));
-        Pizza b = new HamDecorator(new BasePizza());
-
-        System.out.println(PizzaRater.pizzaScore(a, b));
+        return 1 - Math.max(Math.min((double)mistakes / (double)orderComplexity, 1.), 0.);
     }
 }
